[tool.poetry]
name = "kd-flask-api"
version = "0.1.0"
description = ""
authors = ["devCharles <carlos.silva@yellowme.mx>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
gunicorn = "^20.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
